--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -23,7 +23,7 @@ jobs:
         id: terraform-build
         uses: libre-devops/azure-terraform-gh-action@v1
         with:
-          terraform-path: "terraform"
+          terraform-path: "examples/standard"
           terraform-workspace-name: "dev"
           terraform-backend-storage-rg-name: ${{ secrets.SpokeSaRgName }}
           terraform-backend-storage-account-name: ${{ secrets.SpokeSaName }}
@@ -38,3 +38,4 @@ jobs:
           checkov-skipped-tests: "CKV_AZURE_116,CKV_AZURE_117,CKV_AZURE_137,CKV_AZURE_138,CKV_AZURE_139,CKV_AZURE_141,CKV_AZURE_145,CKV_AZURE_151,CKV_AZURE_33,CKV_AZURE_34,CKV_AZURE_35,CKV_AZURE_4,CKV_AZURE_44,CKV_AZURE_50,CKV_AZURE_7,CKV_AZURE_98,CKV2_AZURE_1,CKV2_AZURE_18,CKV2_AZURE_21,CKV2_AZURE_8"
           run-terraform-destroy: "false"
           run-terraform-plan-only: "true"
+          terraform-version: "latest"
